# openvibe

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md
docs/: CLAUDE-CODE-INSTRUCTIONS.md  (+2 more)
v4/openvibe-cli/: pyproject.toml
v4/openvibe-cli/src/openvibe_cli/: __init__.py  main.py
v4/openvibe-cli/tests/: test_init.py
v4/openvibe-platform/: pyproject.toml
v4/openvibe-platform/src/openvibe_platform/: __init__.py  app.py  gateway.py  webhook.py  workspace.py
v4/openvibe-platform/src/openvibe_platform/routers/: __init__.py  approvals.py  deliverables.py  roles.py  workspaces.py
v4/openvibe-platform/tests/: conftest.py  test_api_approvals.py  test_app_init.py  test_gateway.py  test_init.py  test_webhook.py  test_workspace.py
v4/openvibe-sdk/: pyproject.toml
v4/openvibe-sdk/docs/: GETTING-STARTED.md
v4/openvibe-sdk/src/openvibe_sdk/: __init__.py  models.py  operator.py  role.py  runtime.py  tools.py
v4/openvibe-sdk/src/openvibe_sdk/llm/: __init__.py
v4/openvibe-sdk/src/openvibe_sdk/memory/: __init__.py  filesystem.py
v4/openvibe-sdk/tests/: test_agent_node.py  test_authority.py  test_imports.py  test_integration.py  test_llm_node.py  test_llm_types.py  test_memory_filesystem.py  test_role.py  test_role_runtime.py  test_role_spawn.py  test_v3_models.py
v5/vibe-inc/: .env.example  .gitignore  pyproject.toml
v5/vibe-inc/config/: roles.yaml  soul.yaml
v5/vibe-inc/docs/: README.md
v5/vibe-inc/shared_memory/audiences/: icp-definitions.yaml
v5/vibe-inc/shared_memory/data/: catalog.yaml  field_mapping.yaml  intent_stage_classification.sql
v5/vibe-inc/shared_memory/messaging/: board-framework.yaml  bot-framework.yaml  dot-framework.yaml
v5/vibe-inc/shared_memory/performance/: cac-benchmarks.yaml  funnel_benchmarks.yaml  live_testing_insights.yaml
v5/vibe-inc/src/vibe_inc/: main.py
v5/vibe-inc/src/vibe_inc/roles/d2c_growth/: __init__.py  amazon_ad_ops.py  crm_ops.py  cro_ops.py  cross_platform_ops.py  cross_platform_workflows.py  daily_report_ops.py  daily_report_queries.py  email_ops.py  email_workflows.py  google_ad_ops.py  linkedin_ad_ops.py  workflows.py
v5/vibe-inc/src/vibe_inc/roles/story_distributor/: __init__.py  ad_ops.py  cro_ops.py  workflows.py
v5/vibe-inc/src/vibe_inc/tools/: analytics_tools.py  ga4.py  meta_ads.py  shared_memory.py  shopify.py
v5/vibe-inc/src/vibe_inc/tools/ads/: amazon_ads.py  google_ads.py  linkedin_ads.py  meta_ads.py  unified_metrics.py
v5/vibe-inc/src/vibe_inc/tools/analytics/: __init__.py  ga4.py  redshift.py
v5/vibe-inc/src/vibe_inc/tools/commerce/: klaviyo.py  shopify.py
v5/vibe-inc/src/vibe_inc/tools/crm/: hubspot.py
v5/vibe-inc/tests/: test_ab_testing_tools.py  test_ad_ops.py  test_amazon_ad_ops.py  test_amazon_ads_tools.py  test_analytics_provider.py  test_analytics_tools.py  test_crm_ops.py  test_cro_ops.py  test_cro_ops_expanded.py  test_cross_platform_ops.py  test_cross_platform_workflows.py  test_d2c_growth.py  test_daily_report_ops.py  test_daily_report_queries.py  test_data_catalog_bootstrap.py  test_email_ops.py  test_email_workflows.py  test_ga4.py  test_ga4_provider.py  test_google_ad_ops.py  test_google_ads_tools.py  test_hubspot_tools.py  test_integration.py  test_integration_dataops_growth.py  test_klaviyo_tools.py  test_linkedin_ad_ops.py  test_linkedin_ads_tools.py  test_live_tools.py  test_meta_ads.py  test_redshift_provider.py  test_runtime_wiring.py  test_shared_memory_bootstrap.py  test_shared_memory_tools.py  test_shopify.py  test_shopify_tools_expanded.py  test_story_distributor.py  test_unified_metrics_tools.py  test_workflows.py
(+284 files in other folders)
