[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openvibe-cli"
version = "0.1.0"
description = "CLI for OpenVibe — manage workspaces, roles, tasks, deliverables"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30.0",
]

[project.scripts]
vibe = "openvibe_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/openvibe_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
