[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openvibe-sdk"
version = "0.1.0"
description = "4-layer framework for human+agent collaboration"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "langgraph>=0.3.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openvibe_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
