[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibe-inc"
version = "0.1.0"
description = "Vibe Inc D2C marketing roles on OpenVibe V5"
requires-python = ">=3.13"
dependencies = [
    "openvibe-sdk>=1.0.0",
    "openvibe-runtime>=1.0.0",
    # Ad Platforms
    "facebook-business>=22.0",
    "google-ads>=25.0.0",
    "httpx>=0.27",
    # Analytics
    "google-analytics-data>=0.18.0",
    "redshift-connector>=2.1",
    # Commerce + Email
    "ShopifyAPI>=12.0.0",
    # Infrastructure
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vibe_inc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
